# RoCo_BrickAssembly

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: README.md  lego_library.json  system_config.json  user_config.json
robot_assets/DexMate/: vega_1u_gripper.urdf  vega_1u_gripper.usda
robot_assets/DexMate/configuration/: vega_1u_Gripper_gripper.usd  vega_1u_collision_spheres.collision_physics.usd  vega_1u_collision_spheres.collision_robot.usd  vega_1u_collision_spheres.collision_sensor.usd  vega_1u_gripper_Gripper_gripper.usd  vega_1u_gripper_Gripper_gripper1.usd  vega_1u_physics.usd
run/: demo.py  main.py
src/rocobrick/: __init__.py  utils.py
src/rocobrick/env/: Env.py  __init__.py
src/rocobrick/policy/: NaivePolicy.py  Policy.py  __init__.py
src/rocobrick/robot/: Robot.py  __init__.py
src/rocobrick/task_config/: Task.py  __init__.py
tasks/: README.md
tasks/type1/example1/: structure_goal.json  structure_start.json
